--- a/data/report.yml
+++ b/data/report.yml
@@ -8,11 +8,15 @@ health:
         null: runner.png
       snp:
         - rs1815739
+    - title: Probabilidad de c&aacute;
+      snp:
+        - rs2910164
     - title: Diabetes tipo 2
       snp:
         - rs9939609
         - rs7903146
         - rs12255372
+        - rs8050136
     - title: Riesgo de padecer un ataque card&iacute;aco?
       snp:
         - rs662799
@@ -21,6 +25,7 @@ health:
       snp:
         - rs1799971
         - rs671
+        - rs738409
     - title: Riesgo de padecer una enfermedad coronaria
       snp:
         - rs1333049
@@ -71,6 +76,32 @@ health:
     - title: Metabolismo de la warfarina
       snp:
         - rs1057910
+    - title: Efectos de las drogas
+      snp:
+        - rs1800460
+        - rs1142345
+        - rs1800462
+    - title: Metabolismo de la warfarina
+      snp:
+        - rs1057910
+    - title: Riesgo de trastornos autoinmunes
+      snp:
+        - rs2476601
+    - title: Riesgo de enfermedades
+      snp:
+        - rs7574865
+    - title: Riesgo de degeneraci&oacute;n macular
+      snp:
+        - rs10490924
+    - title: Sufrir consecuencias metab&oacute;licas
+      snp:
+        - rs780094
+    - title: Riesgo Padecer enfermedades autoinmunes
+      snp:
+        - rs11209026
+    - title: Riesgo a padecer varios tipos de c&aacute;ncer
+      snp:
+        - rs11614913
 diseases:
   title: Enfermedades
   icon: diseases.png
@@ -92,6 +123,7 @@ diseases:
         - rs333
         - rs9264942
         - rs2572886
+        - i3003626
     - title: Portador de fibrosis qu&iacute;stica?
       snp:
         - rs121908747
@@ -163,6 +195,7 @@ diseases:
     - title: C&aacute;ncer de prostata
       snp:
         - rs1447295
+        - rs6983267
     - title: Enfermedad peroxisomal
       snp:
         - rs61750420
@@ -244,6 +277,15 @@ diseases:
     - title: Deficiencia seudocolinesterasa
       snp:
         - rs28933389
+    - title: Tratamiento Hepatitis C.
+      snp:
+        - rs12979860
+    - title: Riesgo de padecer enfermedades
+      snp:
+        - rs1800629
+    - title: Riesgo de IL6
+      snp:
+        - rs1800795
 social:
   title: Social
   icon: social.png
@@ -257,6 +299,7 @@ social:
     - title: Dependencia a la nicotina
       snp:
         - rs1051730
+        - rs16969968
 features:
   title: Rasgos
   icon: features.png
@@ -267,6 +310,7 @@ features:
         null: bald_man.png
       snp:
         - rs6152
+        - rs6625163
     - title: Color de ojos
       snp:
         - rs7495174
@@ -274,10 +318,10 @@ features:
     - title: Cera de o&iacute;do y olor corporal
       snp:
         - rs17822931
-    - title: Nivel cognitivo
+    - title: Memor&iacute;a y atenci&oacute;n
       snp:
         - rs4680
-    - title: Pron&oacute;stico del tamaño del bebe
+    - title: Pron&oacute;stico del tama&ntilde;o del bebe
       snp:
         - rs1799884
     - title: Te gustan los sabores amargos?
@@ -286,6 +330,46 @@ features:
     - title: Glucosa
       snp:
         - rs560887
+    - title: Capacidad de aprendizaje
+      snp:
+        - rs6265
+    - title: Gen de la Serotonina
+      snp:
+        - rs25531
+    - title: Olor de la orina
+      snp:
+        - rs4481887
+    - title: Probabilidad de pelo rubio
+      snp:
+        - rs12821256
+        - rs1667394
+    - title: Tama&ntilde;o de senos.
+      snp:
+        - rs7816345
+    - title: Consumo de caf&iacute;na
+      snp:
+        - rs2472297
+    - title: Como metabolizas la caf&iacute;na
+      snp:
+        - rs762551
+    - title: Aparici&oacute;n de la primera menstruaci&oacute;n
+      snp:
+        - rs7759938
+    - title: Pecoso?
+      snp:
+        - rs4778138
+        - rs1805007
+    - title: Pelo rizado o liso?
+      snp:
+        - rs11803731
+        - rs17646946
+        - rs7349332
+    - title: Caracter&iacute;sticas del pelo
+      snp:
+        - rs3827760
+    - title: Altura
+      snp:
+        - rs1042725
 diet:
   title: Dieta
   icon: diet.png
@@ -300,10 +384,9 @@ diet:
         - rs1799883
         - rs1801282
         - rs1042714
-    - title: Pelo rizado o liso?
-      snp:
-        - rs11803731
     - title: Intolerancia al azucar?
       snp:
         - rs1800546
-
+    - title: Probabilidad de tener un IMC alto
+      snp:
+        - rs17782313
