--- a/data/report.yml
+++ b/data/report.yml
@@ -356,10 +356,10 @@ features:
     - title: Tama&ntilde;o de senos.
       snp:
         - rs7816345
-    - title: Consumo de caf&iacute;na
+    - title: Consumo de cafe&iacute;na
       snp:
         - rs2472297
-    - title: Como metabolizas la caf&iacute;na
+    - title: Como metabolizas la cafe&iacute;na
       snp:
         - rs762551
     - title: Aparici&oacute;n de la primera menstruaci&oacute;n
