--- a/data/en/report.yml
+++ b/data/en/report.yml
@@ -2,54 +2,53 @@ health:
   title: Health
   icon: health.png
   data:
-    - title: Gen&eacute;tica muscular
+    - title: Muscle genetics
       icon_result:
         true: athlete.png
         null: runner.png
       snp:
         - rs1815739
-    - title: Probabilidad de c&aacute;ncer
+    - title: Probability of cancer
       snp:
         - rs2910164
-      default: Felicidades parece que no pasa nada.
-    - title: Diabetes tipo 2
+      default: Congratulations, nothing happens.
+    - title: Type 2 diabetes
       snp:
         - rs9939609
         - rs7903146
         - rs12255372
         - rs8050136
-    - title: Riesgo de padecer un ataque card&iacute;aco?
+    - title: Risk of cardiac arrest?
       snp:
         - rs662799
         - rs10757278
         - rs4994
-      default: Eres un TORO!
-    - title: Dependencia al alcohol
+      default: You are a BULL!
+    - title: Alcohol addiction
       snp:
         - rs1799971
         - rs671
         - rs738409
-    - title: Riesgo de padecer una enfermedad coronaria
+    - title: Risk of coronary heart disease
       snp:
         - rs1333049
-    - title: Riesgo de metabolismo de folato y/o varios c&aacute;ncer.
+    - title: Risk of folate metabolism and/or various cancer
       snp:
         - rs1801133
-    - title: Receptores de Estr&oacute;genos (Fertilidad)
+    - title: Estrogen Receptors (Fertility)
       snp:
         - rs9340799
-    - title: Deficiencia de factor XI?
+    - title: Factor XI deficiency?
       snp:
         - rs121965063
-    - title: Falta de hierro?
+    - title: Iron Levels
       snp:
         - rs1799945
-      default: Menudo lobezno est&aacute;s hecho.
-    - title: Tombosis e infarto cerebral
+    - title: Thrombosis and cerebral infarction
       snp:
         - rs1799963
         - rs6025
-    - title: Poliquistico?
+    - title: Polycystic?
       snp:
         - rs200511261
         - rs369925690
