--- a/data/es/report.yml
+++ b/data/es/report.yml
@@ -104,6 +104,10 @@ health:
     - title: Riesgo a padecer varios tipos de c&aacute;ncer
       snp:
         - rs11614913
+    - title: Alergia al cacahuete?
+      snp:
+        - rs9275596
+        - rs7192
 diseases:
   title: Enfermedades
   icon: diseases.png
